# autonomous_pick_place

./: CMakeLists.txt  package.xml
files/: trajectory.txt
include/: autonomous_pick_place.h  benchmarking.h  grasping.h  object_detection.h  path_planning.h
launch/: start_controllers.launch  startup.launch
msg/: benchmark.msg  benchmarking.msg
rosbags/: 2019-05-01-11-33-46.bag  2019-05-01-11-41-17.bag  2019-05-01-11-43-14.bag  2019-05-01-13-25-13.bag  2019-05-01-13-31-41.bag
rosbags/2019-05-01-11-18-50/: 2019-05-01-11-18-50.bag  tf_base_xtion.csv
rosbags/2019-05-01-11-33-46/: extra_joints_slash_state.csv  marker_detector_slash_markers.csv  tf_base_xtion.csv
rosbags/fixed_angle/2019-05-01-11-41-17/: extra_joints_slash_state.csv  marker_detector_slash_markers.csv  plot_data.py  tf_base_xtion.csv
rosbags/fixed_angle/2019-05-01-11-43-14/: extra_joints_slash_state.csv  marker_detector_slash_markers.csv  tf_base_xtion.csv
rosbags/fixed_angle/2019-05-01-13-25-13/: extra_joints_slash_state.csv  linear_regressor_angle.sav  marker_detector_slash_markers.csv  plot_data.py  tf_base_xtion.csv
rosbags/fixed_distance/2019-05-01-11-37-07/: 2019-05-01-11-37-07.bag  extra_joints_slash_state.csv  marker_detector_slash_markers.csv  plot_data.py  tf_base_xtion.csv
rosbags/fixed_distance/2019-05-01-13-31-41/: extra_joints_slash_state.csv  linear_model.sav  marker_detector_slash_markers.csv  plot_data.py  tf_base_xtion.csv
scripts/: 2019-05-03-08-18-40.bag  benchmarking.py  custom_calibration.py  disable_collisions.py  head_down.sh  linear_regressor_angle.joblib  model.py  publish_camera_info.py  publish_new_tf.py  publish_tf.py  startup.sh
src/: autonomous_pick_place.cpp  autonomous_pick_place_node.cpp  benchmarking.cpp  benchmarking_node.cpp  frame_adder.cpp  generate_data.cpp  grasping.cpp  gripper_communication_error_solver.cpp  gripper_state_adder.cpp  object_detection.cpp  path_planning.cpp  test_node.cpp
