<package>

    <name>autonomous_pick_place</name>
    <version>1.0.0</version>
    <description>
    Node to autonomously pick and place objects using Marco.
    </description>
    <maintainer email="f.meccanici@heemskerk-innovative.nl">Floris Meccanici</maintainer>
    <author>Floris Meccanici</author>
    <license>new BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>roscpp</build_depend>
    <build_depend>std_msgs</build_depend>
    <build_depend>dynamixel_workbench_msgs</build_depend>
    <build_depend>geometry_msgs</build_depend>
    <build_depend>sensor_msgs</build_depend>
    <build_depend>message_generation</build_depend>
    <build_depend>message_filters</build_depend>
    <build_depend>dynamic_reconfigure</build_depend>
    <build_depend>rosbag</build_depend>

    <build_depend>moveit_ros_planning_interface</build_depend>
    <build_depend>eigen</build_depend>
    <build_depend>moveit_visual_tools</build_depend>

    <run_depend>roscpp</run_depend>
    <run_depend>std_msgs</run_depend>
    <run_depend>dynamixel_workbench_msgs</run_depend>
    <run_depend>geometry_msgs</run_depend>
    <run_depend>sensor_msgs</run_depend>
    <run_depend>message_generation</run_depend>
    <run_depend>message_filters</run_depend>
    <run_depend>dynamic_reconfigure</run_depend>
    <run_depend>rosbag</run_depend>
    
    <run_depend>moveit_ros_planning_interface</run_depend>
    <run_depend>eigen</run_depend>

    <run_depend>moveit_visual_tools</run_depend>

</package>